--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "atom-python-debugger",
   "main": "./lib/python-debugger",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": false,
   "description": "Quickly and easily add ipdb statements",
-  "activationEvents": ["python-debugger:toggle"],
+  "activationEvents": [
+    "python-debugger:toggle"
+  ],
   "repository": "https://github.com/fxdgear/atom-python-debugger",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
